fullapp/fullapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - targetPort: 6379
      port: 6379
      name: redis-service

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres-service

---

apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: NodePort
  selector:
    app: vote
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 31000
      name: vote-service

---
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: NodePort
  selector:
    app: result
  ports:
    - port: 8090
      targetPort: 80
      nodePort: 31001
      name: result-service
