fullapp/fullapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullapp- ingress
  labels:
    app: ingress
spec:
  rules:
    - host: ""
      http:
        paths:
        - path: /vote
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 8080
        - path: /result
          pathType: Prefix
          backend:
            service:
              name: result
              port:
                number: 8090
